--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -1,13 +1,12 @@
 {
-    "login":"ログイン";
-    "E-Mail Address":"メールアドレス",
-    "Password":"パスワード",
-    "Remember Me":"ログイン状態を保存する",
-    "Forgot Your Password?":"パスワードをお忘れですか ?",
-    "Register":"登録",
-    "Name":"お名前",
-    "Confirm Password":"パスワード(確認用)",
-    "Reset Password":"パスワードリセット",
-    "Send Password Reset Link":"パスワードリセットリンク送信",
-    "Logout":"ログアウト",
+    "Login": "ログイン",
+    "Register": "ユーザー登録",
+    "Forgot Your Password?": "パスワードを忘れた場合",
+    "Reset Password": "パスワード再設定",
+    "Send Password Reset Link": "パスワード再設定URLを送信",
+    "Name": "ユーザー名",
+    "E-Mail Address": "メールアドレス",
+    "Password": "パスワード",
+    "Confirm Password": "パスワード(確認用)",
+    "Remember Me": "ログイン状態を保存"
 }
