--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -9,5 +9,6 @@
     "E-Mail Address": "メールアドレス",
     "Password": "パスワード",
     "Confirm Password": "パスワード(確認用)",
-    "Remember Me": "ログイン状態を保存"
+    "Remember Me": "ログイン状態を保存",
+    "Self_Introduction": "自己紹介"
 }
