--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -4,7 +4,9 @@
     "Logout": "ログアウト",
     "Forgot Your Password?": "パスワードをお忘れの方はこちらへ",
     "Reset Password": "パスワード再設定",
-    "Send Password Reset Link": "パスワード再設定URLを送信",
+    "Reset Email": "メールアドレス再設定",
+    "Send Password Reset Link": "再設定URLを送信",
+    "Send Email Reset Link": "再設定URLを送信",
     "Name": "ユーザー名",
     "E-Mail Address": "メールアドレス",
     "Password": "パスワード",
